# A3Gtk

./: .gitignore  CMakeLists.txt
include/A3Gtk/: splashwindow.hpp
resources/: images.gresource.xml
resources/images/: arma_cursor.cur
src/: splashwindow.cpp
test/: main.cpp
test/splashscreen/: main.cpp  splashscreen.cpp  splashscreen.hpp
test/teststyle/: examplewindow.cpp  examplewindow.hpp  main.cpp
